Refactored the Codebase...

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fontawesome.com/v4/" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="Styles/style.css" />
     <title>vertical Slider</title>
   </head>
   <body>
@@ -29,10 +29,10 @@
         </div>
       </div>
       <div class="right-slide">
-        <div style="background-image: url(img04.jpg)"></div>
-        <div style="background-image: url(img02.jpg)"></div>
-        <div style="background-image: url(img02.jpg)"></div>
-        <div style="background-image: url(img03.jpg)"></div>
+        <div style="background-image: url(Images/img04.jpg)"></div>
+        <div style="background-image: url(Images/img02.jpg)"></div>
+        <div style="background-image: url(Images/img02.jpg)"></div>
+        <div style="background-image: url(Images/img03.jpg)"></div>
       </div>
       <div class="action-botton">
         <button class="down-button">
@@ -43,6 +43,10 @@
         </button>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="Scripts/script.js"></script>
+    <script
+      src="https://kit.fontawesome.com/a1495469f2.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
